--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,9 +10,13 @@ jobs:
     steps:
     - uses: actions/checkout@main
     - name: Delete Existing Release
-      uses: ame-yu/action-delete-latest-release@v2
+      uses: actions/github-script@v6
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
+        script: |
+          const { owner, repo } = context.repo
+          const { data: { id } } = await github.repos.getLatestRelease({ owner, repo })
+          await github.repos.deleteRelease({ owner, repo, release_id: id })
     - name: Archive Mod
       run: |
          .\.github\7za.exe -tzip a ".\AddSnipers.zip" ".\AddSnipers"
@@ -24,7 +28,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: Release
-        release_name: Add Snipers Release
+        release_name: Add Snipers
         draft: false
         prerelease: false
         body: |
