--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,9 +10,9 @@ jobs:
     steps:
     - uses: actions/checkout@main
     - name: Delete Existing Release
-      uses: actions/github-script@v6
+      uses: actions/github-script@v4
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        github-token: ${{ secrets.GITHUB_TOKEN }}
         script: |
           const { owner, repo } = context.repo
           const { data: { id } } = await github.repos.getLatestRelease({ owner, repo })
