--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,13 +21,18 @@ jobs:
       run: |
          .\.github\7za.exe -tzip a ".\AddSnipers.zip" ".\AddSnipers"
       shell: powershell
+    - name: Get Version
+      uses: mathiasvr/command-output@v2.0.0
+      id: version
+      with:
+        run: .\.github\getversion.exe .\AddSnipers\mod.txt
     - name: Create New Release
       id: create_release
       uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: Release
+        tag_name: ${{ steps.version.outputs.stdout }}
         release_name: Add Snipers
         draft: false
         prerelease: false
