--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,13 +10,9 @@ jobs:
     steps:
     - uses: actions/checkout@main
     - name: Delete Existing Release
-      uses: actions/github-script@v4
+      uses: ame-yu/action-delete-latest-release@v2
       with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        script: |
-          const { owner, repo } = context.repo
-          const { data: { id } } = await github.repos.getLatestRelease({ owner, repo })
-          await github.repos.deleteRelease({ owner, repo, release_id: id })
+        github_token: ${{ secrets.GITHUB_TOKEN }}
     - name: Archive Mod
       run: |
          .\.github\7za.exe -tzip a ".\AddSnipers.zip" ".\AddSnipers"
