--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,9 @@ jobs:
       uses: mathiasvr/command-output@v2.0.0
       id: version
       with:
-        run: .\.github\getversion.exe .\AddSnipers\mod.txt
+        run: |
+          .\.github\getversion.exe .\AddSnipers\mod.txt
+        shell: powershell
     - name: Create New Release
       id: create_release
       uses: actions/create-release@v1
